# Contorg

./: .gitignore  README.md  manage.py  pyproject.toml
Docs/: SystemDesign.md
contorg/: asgi.py  settings.py  urls.py  wsgi.py
core/: views.py
core/static/core/: core-styles.css
core/static/login/: login-style.css
core/templates/core/: index.html
core/templates/login/: login.html
